<resources>
    <plurals name="footer_text_category">
        <item quantity="one">1 categoria</item>
        <item quantity="other">%d categorias</item>
    </plurals>
    <plurals name="footer_text_product">
        <item quantity="one">1 produto</item>
        <item quantity="other">%d produtos</item>

    </plurals>

    <plurals name="footer_text_client">
        <item quantity="one">1 cliente</item>
        <item quantity="other">%d clientes</item>

    </plurals>
    <string name="app_name">Mobile Golden Leaf</string>
    <string name="brand">Marca</string>
    <string name="description">Descrição</string>
    <string name="value">Valor</string>
    <string name="code">Código</string>
    <string name="title">Título</string>
    <string name="name">Nome completo</string>
    <string name="phoneNumber">Número de celular</string>
    <string name="identification">Identificaçãp (rg)</string>
    <string name="street">Rua</string>
    <string name="save">Salvar</string>
    <string name="add_product">Adicionar produto</string>
    <string name="add_client">Adicionar cliente</string>
    <string name="add_order">Adicionar pedido</string>
    <string name="add_category">Adicionar categoria</string>
    <string name="edit_product">Editar produto</string>
    <string name="edit_category">Editar categoria</string>
    <string name="edit_client">Editar cliente</string>
    <string name="date">Data</string>
    <string name="category">Categoria</string>
    <string name="customer">Cliente</string>
    <string name="total">Total</string>
    <string name="mes">Mês</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="product_saving_error">Não foi possível salvar o produto.</string>
    <string name="client_saving_error">Não foi possível salvar o cliente.</string>
    <string name="address_saving_error">Não foi possível salvar o produto.</string>
    <string name="getting_categories_error">Não foi possível obter as categorias a patir servidor.</string>
    <string name="getting_products_error">Não foi possível obter os produtos a patir servidor.</string>
    <string name="getting_customer_error">Não foi possível obter os clientes a patir servidor.</string>
    <string name="getting_clerk_error">Não foi fazer login.</string>
    <string name="ano">Ano</string>"Erro no valor inserido."
    <string name="see_products">Ver produtos</string>
    <string name="see_orders">Ver pedidos</string>
    <string name="option_dashboard">Dashboard</string>
    <string name="option_category">Categorias</string>
    <string name="option_product">Produtos</string>
    <string name="option_client">Clients</string>
    <string name="option_order">Pedidos</string>
    <string name="option_payments">Pagamentos</string>
    <string name="client_information">Informações do cliente</string>
    <string name="client_address_information">Informações do endereço</string>
    <string name="action_new_category">Nova categoria</string>
    <string name="product_not_found_error">Erro ao salvar produto</string>
    <string name="error_msg_email">Email Inválido</string>
    <string name="error_msg_password">Senha Inválida</string>
    <string name="invalid_title_error">Titulo inválido</string>
    <string name="value_error">"Erro no valor do produto. Salvo com valor 0.0."</string>
    <string name="product_invalid_error">Produto com campos inválidos</string>
    <string name="client_invalid_error">Cliente com campos inválidos</string>
    <string name="address_invalid_error">Endereço com campos inválidos</string>
    <string-array name="sections">
        <item>Categorias</item>
        <item>Produtos</item>
        <item>Clientes</item>
        <item>Pedidos</item>
    </string-array>
</resources>
