<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_dashboard"
            android:checked="true"
            android:icon="@drawable/ic_option_dashboard"
            android:title="@string/option_dashboard" />

        <item
            android:id="@+id/action_category"
            android:icon="@drawable/ic_option_categories"
            android:title="@string/option_category" />
        <item
            android:id="@+id/action_product"
            android:icon="@drawable/ic_option_products"
            android:title="@string/option_product" />
        <item
            android:id="@+id/action_client"
            android:icon="@drawable/ic_option_clients"
            android:title="@string/option_client" />

        <item
            android:id="@+id/action_order"
            android:icon="@drawable/ic_option_orders"
            android:title="@string/option_order" />
    </group>
</menu>