<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/category"
        android:textColor="#7b7b7b"
        android:textSize="12dp" />

    <Spinner
        android:id="@+id/form_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/form_product_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/brand"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/form_product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/form_product_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/form_product_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/value"
        android:inputType="numberDecimal" />


</LinearLayout>